.circleci/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "java-microservice-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: my-eks-alb
    alb.ingress.kubernetes.io/load-balancer-name: java-microservice-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: java-microservice
spec:
  rules:
    - host: my-eks-app.devops.com
      http:
        paths:
          - path: /main
            pathType: Prefix
            backend:
              service:
                name: "service-java-microservice"
                port:
                  number: 80
